[tool.poetry]
name = "code_engineer_team_ai_agents"
version = "0.1.0"
description = "code-engineer-team-AI-agents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
code_engineer_team_ai_agents = "code_engineer_team_ai_agents.main:run"
run_crew = "code_engineer_team_ai_agents.main:run"
train = "code_engineer_team_ai_agents.main:train"
replay = "code_engineer_team_ai_agents.main:replay"
test = "code_engineer_team_ai_agents.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
